--- a/glue_v1/package.json
+++ b/glue_v1/package.json
@@ -13,8 +13,12 @@
     "@hookform/resolvers": "^3.6.0",
     "@mantine/core": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
+    "@reduxjs/toolkit": "^2.2.5",
     "@tabler/icons-react": "^3.5.0",
+    "@tanstack/react-query": "^5.40.1",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.2",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
@@ -24,6 +28,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.35.6",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
