--- a/glue_v1/.env
+++ b/glue_v1/.env
@@ -1,1 +1,4 @@
 VITE_APP_BASE_URL = "https://api.glue.pitetris.com"
+VITE_APP_AUTH0_DOMAIN = dev-w2kxprxe1zf08rz1.us.auth0.com
+VITE_APP_AUTH0_CLIENT_ID = 0g581bxmymBInxSaVkIrRGrjIpXJv4tw
+VITE_APP_AUTH0_CLIENT_SECRET = J1LVGcAe4MA0lY50EPBzdSrqIlD7mP-RyBe_Tl5aLliY3OrplnRGEdBtafcOtDGP
