--- a/glue_v1/package.json
+++ b/glue_v1/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "@hookform/resolvers": "^3.6.0",
     "@mantine/core": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
@@ -24,6 +25,7 @@
     "react-hook-form": "^7.51.5",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.23.1",
+    "react-social-media-embed": "^2.5.13",
     "swiper": "^11.1.4",
     "yup": "^1.4.0"
   },
