--- a/glue_v1/package.json
+++ b/glue_v1/package.json
@@ -20,6 +20,7 @@
     "@hookform/resolvers": "^3.6.0",
     "@mantine/core": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
+    "@mantine/notifications": "^7.15.1",
     "@reduxjs/toolkit": "^2.2.5",
     "@tabler/icons-react": "^3.5.0",
     "@tanstack/react-query": "^5.40.1",
